--- a/makefile/advance/lib/makefile
+++ b/makefile/advance/lib/makefile
@@ -2,21 +2,25 @@
 # lib/makefile
 # ------------------------------------------------------------------------------
 
-_SUB_PROJS = myliba myliba/mylibb myliba/mylibb/mylibc
-.PHONY: all debug release build clean temp $(_SUB_PROJS)
+_SUBDIRS = mylibc mylibb myliba
+.PHONY: all debug release build clean temp depend $(_SUBDIRS)
 
-export CPPFLAGS += -Wall -g
-
-all    : $(_SUB_PROJS)
-debug  : $(_SUB_PROJS)
-release: $(_SUB_PROJS)
-build  : $(_SUB_PROJS)
-clean  : $(_SUB_PROJS)
+all    : $(_SUBDIRS)
+debug  : $(_SUBDIRS)
+release: $(_SUBDIRS)
+build  : $(_SUBDIRS)
+clean  : $(_SUBDIRS)
 temp   :
 	@echo "MAKECMDGOALS="$(MAKECMDGOALS)
 
-$(_SUB_PROJS):
-	cd $@ && make $(MAKECMDGOALS)
+depend : $(_SUBDIRS)
 
-myliba: myliba/mylibb
-myliba/mylibb: myliba/mylibb/mylibc
+$(_SUBDIRS):
+	@if [ -d $(MAKECMDGOALS) ]; then \
+		cd $@ && make ;\
+	else \
+		cd $@ && make $(MAKECMDGOALS);\
+	fi
+	
+# myliba: mylibb # gilgil temp
+# mylibb: mylibc # gilgil temp
