Change target order(temp depend > depend temp)

--- a/makefile/advance/lib/makefile
+++ b/makefile/advance/lib/makefile
@@ -3,17 +3,16 @@
 # ------------------------------------------------------------------------------
 
 _SUBDIRS = mylibc mylibb myliba
-.PHONY: all debug release build clean temp depend $(_SUBDIRS)
+.PHONY: all debug release build clean depend temp $(_SUBDIRS)
 
 all    : $(_SUBDIRS)
 debug  : $(_SUBDIRS)
 release: $(_SUBDIRS)
 build  : $(_SUBDIRS)
 clean  : $(_SUBDIRS)
+depend : $(_SUBDIRS)
 temp   :
 	@echo "MAKECMDGOALS="$(MAKECMDGOALS)
-
-depend : $(_SUBDIRS)
 
 $(_SUBDIRS):
 	@if [ -d $(MAKECMDGOALS) ]; then \
