--- a/makefile/advance/makefile
+++ b/makefile/advance/makefile
@@ -3,19 +3,19 @@
 # ------------------------------------------------------------------------------
 
 _SUBDIRS = lib src test
-.PHONY: all debug release build clean temp depend $(_SUBDIRS)
+.PHONY: all debug release build clean depend temp deps_check $(_SUBDIRS)
 
 all: deps_check
-	@cd lib  && make release && cd ..
-	@cd src  && make release && cd ..
-	@cd test && make debug   && cd ..
+	@cd lib  && make release
+	@cd src  && make release
+	@cd test && make debug
 	
 debug  : $(_SUBDIRS)
 release: $(_SUBDIRS)
 build  : $(_SUBDIRS)
 clean  : $(_SUBDIRS)
-temp   :
 depend : $(_SUBDIRS)
+temp   :
 
 deps_check:
 	@echo "deps_check"
