--- a/makefile/advance/src/makefile
+++ b/makefile/advance/src/makefile
@@ -8,13 +8,12 @@ _ABSDIR := $(shell dirname $(PWD))
 _RELDIR := ..
 include ../lib/myliba/myliba.mk
 
-_SRCS = $(wildcard *.cpp)
+_SRCS = $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
 _DEPS = $(_OBJS:%.o=%.d)
 _EXEC = ../bin/hello_world
 
 CPPFLAGS += -Wall -g
-
 #LDLIBS += -lpthread
 
 all: release
@@ -37,7 +36,7 @@ depend: $(_DEPS) $(MAKEFILE_LIST)
 temp:
 	@echo "_ABSDIR  ="$(_ABSDIR)
 	@echo "_RELDIR  ="$(_RELDIR)
-	@echo "MYLIBC_PATH="$(MYLIBC_PATH)
+	@echo "MYLIBC_DIR="$(MYLIBC_DIR)
 
 $(_OBJS): $(MAKEFILE_LIST)
 
@@ -53,7 +52,7 @@ $(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
 %.d: %.cpp
 	$(COMPILE.cc) -MM $< > $@
 
-_NODEPS=clean temp depend
+_NODEPS=clean depend temp
 ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(_NODEPS))))
 	-include $(_DEPS)
 endif
