--- a/makefile/advance/src/makefile
+++ b/makefile/advance/src/makefile
@@ -16,10 +16,10 @@ _EXEC = ../bin/hello_world
 
 all: release
 
-debug: CPPFLAGS += -O0
+debug: CPPFLAGS += -O0 -D_DEBUG
 debug: build
 
-release: CPPFLAGS += -O2
+release: CPPFLAGS += -O2 -D_RELEASE
 release: build
 	
 build: $(_EXEC)
