Add  variable to store .o and .d files

--- a/makefile/advance/src/makefile
+++ b/makefile/advance/src/makefile
@@ -9,8 +9,10 @@ _RELDIR := ..
 include ../lib/lib3/lib3.mk
 include src.mk
 
+_TEMP = .tmp
+VPATH += $(_TEMP)
 _SRCS = $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp)
-_OBJS = $(addsuffix .o,$(basename $(_SRCS)))
+_OBJS = $(addprefix $(_TEMP)/,$(addsuffix .o,$(basename $(_SRCS))))
 _DEPS = $(_OBJS:%.o=%.d)
 _EXEC = ../bin/hello_world
 
@@ -22,12 +24,13 @@ debug: build
 release: CPPFLAGS += -O2 -D_RELEASE
 release: build
 	
-build: $(_EXEC)
+build: $(_TEMP) $(_EXEC)
 
 clean:
 	rm -rf $(_OBJS)
 	rm -rf $(_DEPS)
 	rm -rf $(_EXEC)
+	rm -rf $(_TEMP)
 
 depend: $(_DEPS) $(MAKEFILE_LIST)
 
@@ -40,14 +43,26 @@ $(_OBJS): $(MAKEFILE_LIST)
 $(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
 	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
 
-%.d: %.c
+$(_TEMP):
+	mkdir -p $@
+
+$(_TEMP)/%.d: %.c
 	$(COMPILE.c) -MM $< > $@
-	
-%.d: %.cc
+
+$(_TEMP)/%.d: %.cc
 	$(COMPILE.cc) -MM $< > $@
 
-%.d: %.cpp
-	$(COMPILE.cc) -MM $< > $@
+$(_TEMP)/%.d: %.cpp
+	$(COMPILE.cpp) -MM $< > $@
+
+$(_TEMP)/%.o: %.c
+	$(COMPILE.c) $(OUTPUT_OPTION) $<
+
+$(_TEMP)/%.o: %.cc
+	$(COMPILE.cc) $(OUTPUT_OPTION) $<
+
+$(_TEMP)/%.o: %.cpp
+	$(COMPILE.cpp) $(OUTPUT_OPTION) $<
 
 _NODEPS=clean depend temp
 ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(_NODEPS))))
