--- a/makefile/advance/lib/lib3/makefile
+++ b/makefile/advance/lib/lib3/makefile
@@ -8,8 +8,10 @@ _ABSDIR := $(shell dirname $(PWD))
 _RELDIR := ..
 include ../lib2/lib2.mk
 
+_TEMP = .tmp
+VPATH += $(_TEMP)
 _SRCS = $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp)
-_OBJS = $(addsuffix .o,$(basename $(_SRCS)))
+_OBJS = $(addprefix $(_TEMP)/,$(addsuffix .o,$(basename $(_SRCS))))
 _DEPS = $(_OBJS:%.o=%.d)
 _LIB  = lib$(shell basename $(PWD)).a
 
@@ -24,12 +26,13 @@ debug: build
 release: CPPFLAGS += -O2 -D_RELEASE
 release: build
 
-build: $(_LIB)
+build: $(_TEMP) $(_LIB)
 
 clean:
 	rm -rf $(_OBJS)
-	rm -rf $(_DEPS)	
+	rm -rf $(_DEPS)
 	rm -rf $(_LIB)
+	rm -rf $(_TEMP)
 
 depend: $(_DEPS) $(MAKEFILE_LIST)
 
@@ -41,14 +44,26 @@ $(_OBJS): $(MAKEFILE_LIST)
 $(_LIB): $(_OBJS) $(MAKEFILE_LIST)
 	$(AR) $(ARFLAGS) -o $@ $(_OBJS)
 
-%.d: %.c
+$(_TEMP):
+	mkdir -p $@
+
+$(_TEMP)/%.d: %.c
 	$(COMPILE.c) -MM $< > $@
-	
-%.d: %.cc
+
+$(_TEMP)/%.d: %.cc
 	$(COMPILE.cc) -MM $< > $@
 
-%.d: %.cpp
-	$(COMPILE.cc) -MM $< > $@
+$(_TEMP)/%.d: %.cpp
+	$(COMPILE.cpp) -MM $< > $@
+
+$(_TEMP)/%.o: %.c
+	$(COMPILE.c) $(OUTPUT_OPTION) $<
+
+$(_TEMP)/%.o: %.cc
+	$(COMPILE.cc) $(OUTPUT_OPTION) $<
+
+$(_TEMP)/%.o: %.cpp
+	$(COMPILE.cpp) $(OUTPUT_OPTION) $<
 
 _NODEPS=clean depend temp
 ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(_NODEPS))))
